[package]
name = "mania-back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8"
dotenvy = "0.15.7"
once_cell = "1.21.4"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["macros", "postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
